--- a/biblio.bib
+++ b/biblio.bib
@@ -331,3 +331,10 @@
   biburl    = {https://dblp.org/rec/conf/icra/LongFLLZP18.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{zheng2018magent,
+  title={MAgent: A many-agent reinforcement learning platform for artificial collective intelligence},
+  author={Zheng, Lianmin and Yang, Jiacheng and Cai, Han and Zhou, Ming and Zhang, Weinan and Wang, Jun and Yu, Yong},
+  _booktitle={Thirty-Second AAAI Conference on Artificial Intelligence},
+  year={2018}
+}
