--- a/collective-learning.tex
+++ b/collective-learning.tex
@@ -399,13 +399,20 @@
 		\end{figure}
 	\end{exampleblock}
 \end{frame}
+\begin{frame}{Learning in CAS: Toolkits}
+	\begin{exampleblock}{MAgent~\footnote[frame]{zheng2018magent} \url{https://github.com/geek-ai/MAgent}}
+		\begin{figure}
+			\href{https://www.youtube.com/watch?v=HCSm0kVolqI}{\includegraphics[width=0.7\textwidth]{img/magent.png}}
+		\end{figure}
+	\end{exampleblock}
+\end{frame}
 \begin{frame}{On sample efficiency: Example of learning time }
 	\begin{exampleblock}{A Nowadays problem \dots}
 		\begin{itemize}
 			\item Nowadays, Deep Learning Techniques are used to train complex neural networks
 			\item When applied to Reinforcement Learning, the training phase requires millions of interactions for an agent to learn
 			\item In the Multi-Agent Setting is even worst \dots
-			\item In \footnote[frame]{\fullcite{DBLP:journals/corr/abs-1807-01281}} they train 30 agents in 450k games!
+			\item In the previous example\footnote[frame]{\fullcite{DBLP:journals/corr/abs-1807-01281}}, they train 30 agents in 450k games!
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
