remove cas models

--- a/biblio.bib
+++ b/biblio.bib
@@ -338,3 +338,44 @@
   _booktitle={Thirty-Second AAAI Conference on Artificial Intelligence},
   year={2018}
 }
+
+
+@article{DBLP:journals/corr/abs-1908-03963,
+  author    = {Afshin Oroojlooyjadid and
+               Davood Hajinezhad},
+  title     = {A Review of Cooperative Multi-Agent Deep Reinforcement Learning},
+  journal   = {CoRR},
+  volume    = {abs/1908.03963},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1908.03963},
+  eprinttype = {arXiv},
+  eprint    = {1908.03963},
+  timestamp = {Mon, 19 Aug 2019 13:21:03 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1908-03963.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{gronauer2021multi,
+  title={Multi-agent deep reinforcement learning: a survey},
+  author={Gronauer, Sven and Diepold, Klaus},
+  journal={Artificial Intelligence Review},
+  pages={1--49},
+  year={2021},
+  publisher={Springer}
+}
+
+@article{DBLP:journals/corr/abs-1812-11794,
+  author    = {Thanh Thi Nguyen and
+               Ngoc Duy Nguyen and
+               Saeid Nahavandi},
+  title     = {Deep Reinforcement Learning for Multi-Agent Systems: {A} Review of
+               Challenges, Solutions and Applications},
+  journal   = {CoRR},
+  volume    = {abs/1812.11794},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1812.11794},
+  eprinttype = {arXiv},
+  eprint    = {1812.11794},
+  timestamp = {Thu, 27 Aug 2020 17:49:18 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1812-11794.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
